@@ -18,6 +18,12 @@ Changes
 
 - Added zc.async.partial.Partial for backward compatibility purposes.
 
+- Fix support for Twisted installed reactor XXX NEEDS TEST
+
+- Fix retry behavior for parallel and serial jobs XXX NEEDS TEST
+
+- tweaked the uuid.txt to mention zdaemon/supervisor rather than Zope 3.
+
 1.4.1 (2008-07-30)
 ==================
 
